# BLJ2025_TR_Suj-Dan-Fab-Leo

./: CMakeLists.txt  LICENSE  Life-Calculator.c  Multiply and divide.c  README.md  help.txt  main.c
include/: Bewertung.h  Life-Calculator.h  Multiply_and_divide.h  arg_parser.h  bracket_parser.h  colors.h  config.h  design.h  evaluate_negatives.h  input.h  life_calculator.h  macros.h  parse_factorial.h  parse_negatives.h  parser.h  plus_function.h  rps_game.h  simple_functions.h  special_functions.h  string.c  string.h  sub_expression_parser.h
src/: + funktion.c  Bewertung.c  EE.c  Multiply and divide.c  Multiply_and_divide.c  arg_parser.c  bracket_parser.c  design.c  design.h  evaluate_factorial.c  evaluate_negatives.c  functions.c  functions.h  input.c  life_calculator.c  macros.c  parse_factorial.c  parse_negatives.c  parser.c  parser.h  plus_function.c  rps_game.c  simple_functions.c  simple_functions.h  special_functions.c  special_functions.h  string.c  sub_expression_parser.c
